<resources>
    <string name="app_name">Postulación Prueba2</string>
    <string name="imagenes">Imágenes</string>
    <string name="ubicacion">Ubicaciones</string>
    <string name="peliculas">Peliculas</string>
    <string name="key" translatable="false">a01845c41c53a55ae2454547f29544af</string>
    <!--solo trae una pelicula-->
    <!--<string name="pathMovies" translatable="false">https://api.themoviedb.org/3/movie/550?api_key=a01845c41c53a55ae2454547f29544af</string>-->
    <string name="aceptar">Aceptar</string>
    <string name="prefDatosUser">Preferencias usuario</string>
    <string name="cerrar">Cerrar</string>
    <string name="tiempoRestante">Visualizar en mapa</string>
    <string name="alertInfoMovieTitulo">Información</string>
    <string name="selectOption">Selecciona una opcion:</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="ninguna">Ninguna</string>
    <string name="subirImagenes">Subir Imágenes</string>
    <string name="google_maps_key">AIzaSyCm82umlLJIEpUUF0Ta91wSEAlnygOsOGQ</string>
</resources>